--- a/do_an_server/package.json
+++ b/do_an_server/package.json
@@ -8,8 +8,9 @@
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "cookie-parser": "^1.4.5",
+    "cookies": "^0.8.0",
     "debug": "~2.6.9",
-    "express": "^4.16.4",
+    "express": "^4.17.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "md5": "^2.3.0",
@@ -19,6 +20,7 @@
     "mysql": "^2.18.1",
     "nodemailer": "^6.5.0",
     "nodemailer-smtp-transport": "^2.7.4",
-    "socket.io": "^3.1.2"
+    "socket.io": "^3.1.2",
+    "uuid": "^8.3.2"
   }
 }
