--- a/do_an_server/package.json
+++ b/do_an_server/package.json
@@ -11,6 +11,7 @@
     "base-64": "^1.0.0",
     "cookie-parser": "^1.4.5",
     "cookies": "^0.8.0",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "^4.17.1",
     "http-errors": "~1.6.3",
