--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,6 @@
     "animate.css": "^4.1.1",
     "bootstrap-icons": "^1.3.0",
     "jquery": "^3.6.0",
-    "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
@@ -24,9 +23,7 @@
     "eject": "react-scripts eject",
     "compile:sass": "node-sass --recursive --watch <sass directory> --output <css directory>"
   },
-  "devDependencies": {
-    "node-sass": "4.9.2"
-  },
+  "devDependencies": {},
   "eslintConfig": {
     "extends": [
       "react-app",
