--- a/do_an_server/package.json
+++ b/do_an_server/package.json
@@ -9,6 +9,7 @@
     "@material-ui/core": "^4.11.3",
     "auth": "0.0.9",
     "base-64": "^1.0.0",
+    "bluebird": "^3.7.2",
     "cookie-parser": "^1.4.5",
     "cookies": "^0.8.0",
     "cors": "^2.8.5",
